<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="#090909"
    tools:context=".MainActivity">

<LinearLayout
    android:id="@+id/info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/store_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/royal_book_depot"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/store_works"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/secondhand_books_dealers"
        android:textStyle="bold"
        android:textColor="#E64A19"
        android:textAlignment="center"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/store_image"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/store_works"
        app:srcCompat="@drawable/bookstore"
        android:contentDescription="@string/shop_image" />


        <TextView
            android:id="@+id/about_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/store_description"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/about_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="#ffffff"
            android:text="@string/about_book_store"/>
        <TextView
            android:id="@+id/location_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/address"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:text="@string/location" />

        <TextView
            android:id="@+id/operation_hours_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/operation_hours" />

        <TextView
            android:id="@+id/operation_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:text="@string/hours" />


        <TextView
            android:id="@+id/contact_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/contact_us"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

        <LinearLayout
            android:id="@+id/contact_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/phn_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:text="@string/phn_no" />


            <TextView
                android:id="@+id/email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="#ffffff"
                android:text="@string/email" />

            <TextView
                android:id="@+id/website_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/website"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="20dp"
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:text="@string/website_link" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>